@@ -60,6 +60,7 @@ import org.jetbrains.jps.service.JpsServiceManager;
 import org.jetbrains.jps.service.SharedThreadPool;
 
 import javax.tools.Diagnostic;
+import javax.tools.DiagnosticListener;
 import javax.tools.JavaFileObject;
 import java.io.File;
 import java.io.FileFilter;
@@ -429,12 +430,11 @@ public final class JavaBuilder extends ModuleLevelBuilder {
     try {
       final int targetLanguageLevel = getTargetPlatformLanguageVersion(chunk.representativeTarget().getModule());
 
-      // when forking external javac, compilers from SDK 1.6 and higher are supported
+      // when forking external javac, compilers from SDK 1.7 and higher are supported
       final Pair<String, Integer> forkSdk;
       if (shouldForkCompilerProcess(context, chunk, targetLanguageLevel)) {
-        forkSdk = getForkedJavacSdk(chunk, targetLanguageLevel);
+        forkSdk = getForkedJavacSdk(diagnosticSink, chunk, targetLanguageLevel);
         if (forkSdk == null) {
-          diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, JpsBuildBundle.message("build.message.cannot.start.javac.process.for.0.unknown.jdk.home", chunk.getName())));
           return false;
         }
       }
@@ -464,7 +464,7 @@ public final class JavaBuilder extends ModuleLevelBuilder {
       if (moduleInfoFile != null) { // has modules
         final ModulePathSplitter splitter = MODULE_PATH_SPLITTER.get(context);
         final Pair<ModulePath, Collection<File>> pair = splitter.splitPath(
-          moduleInfoFile, outs.keySet(), ProjectPaths.getCompilationModulePath(chunk, false)
+          moduleInfoFile, outs.keySet(), ProjectPaths.getCompilationModulePath(chunk, false), collectAdditionalRequires(options)
         );
         final boolean useModulePathOnly = Boolean.parseBoolean(System.getProperty(USE_MODULE_PATH_ONLY_OPTION))/*compilerConfig.useModulePathOnly()*/;
         if (useModulePathOnly) {
@@ -529,6 +529,23 @@ public final class JavaBuilder extends ModuleLevelBuilder {
     finally {
       counter.waitFor();
     }
+  }
+
+  @NotNull
+  private static Collection<String> collectAdditionalRequires(Iterable<String> options) {
+    // --add-reads module=other-module(,other-module)*
+    // The option specifies additional modules to be considered as required by a given module.
+    final Set<String> result = new SmartHashSet<>();
+    for (Iterator<String> it = options.iterator(); it.hasNext(); ) {
+      final String option = it.next();
+      if ("--add-reads".equalsIgnoreCase(option) && it.hasNext()) {
+        final String moduleNames = StringUtil.substringAfter(it.next(), "=");
+        if (moduleNames != null) {
+          result.addAll(StringUtil.split(moduleNames, ","));
+        }
+      }
+    }
+    return result;
   }
 
   private static void logJavacCall(ModuleChunk chunk, Iterable<String> options, final String mode) {
@@ -675,7 +692,7 @@ public final class JavaBuilder extends ModuleLevelBuilder {
       final Pair<JpsSdk<JpsDummyElement>, Integer> sdkVersionPair = getAssociatedSdk(chunk);
       if (sdkVersionPair != null) {
         final Integer chunkSdkVersion = sdkVersionPair.second;
-        if (chunkSdkVersion != compilerSdkVersion && chunkSdkVersion >= 6 /*min. supported compiler version*/) {
+        if (chunkSdkVersion != compilerSdkVersion && chunkSdkVersion >= ExternalJavacProcess.MINIMUM_REQUIRED_JAVA_VERSION) {
           // there is a special case because of difference in type inference behavior between javac8 and javac6-javac7
           // so if corresponding JDK is associated with the module chunk, prefer compiler from this JDK over the newer compiler version
           return true;
@@ -1150,37 +1167,73 @@ public final class JavaBuilder extends ModuleLevelBuilder {
   }
 
   @Nullable
-  private static Pair<String, Integer> getForkedJavacSdk(ModuleChunk chunk, int targetLanguageLevel) {
-    final Pair<JpsSdk<JpsDummyElement>, Integer> sdkVersionPair = getAssociatedSdk(chunk);
-    if (sdkVersionPair != null) {
-      final int sdkVersion = sdkVersionPair.second;
-      if (sdkVersion >= 6 && isTargetReleaseSupported(sdkVersion, targetLanguageLevel)) {
-        // current javac compiler does support required language level
-        return Pair.create(sdkVersionPair.first.getHomePath(), sdkVersion);
+  private static Pair<String, Integer> getForkedJavacSdk(DiagnosticListener<? super JavaFileObject> diagnostic, ModuleChunk chunk, int targetLanguageLevel) {
+    final Pair<JpsSdk<JpsDummyElement>, Integer> associatedSdk = getAssociatedSdk(chunk);
+    boolean canRunAssociatedJavac = false;
+    if (associatedSdk != null) {
+      final int sdkVersion = associatedSdk.second;
+      canRunAssociatedJavac = sdkVersion >= ExternalJavacProcess.MINIMUM_REQUIRED_JAVA_VERSION;
+      if (isTargetReleaseSupported(sdkVersion, targetLanguageLevel)) {
+        if (canRunAssociatedJavac) {
+          return Pair.create(associatedSdk.first.getHomePath(), sdkVersion);
+        }
       }
-      LOG.warn("Target bytecode version " + targetLanguageLevel + " is not supported by SDK version " + sdkVersion);
+      else {
+        LOG.warn("Target bytecode version " + targetLanguageLevel + " is not supported by SDK " + sdkVersion + " associated with module " + chunk.getName());
+      }
     }
+
     final String fallbackJdkHome = System.getProperty(GlobalOptions.FALLBACK_JDK_HOME, null);
     if (fallbackJdkHome == null) {
       LOG.info("Fallback JDK is not specified. (See " + GlobalOptions.FALLBACK_JDK_HOME + " option)");
-      return null;
     }
     final String fallbackJdkVersion = System.getProperty(GlobalOptions.FALLBACK_JDK_VERSION, null);
     if (fallbackJdkVersion == null) {
       LOG.info("Fallback JDK version is not specified. (See " + GlobalOptions.FALLBACK_JDK_VERSION + " option)");
+    }
+
+    if (associatedSdk == null && (fallbackJdkHome == null || fallbackJdkVersion == null)) {
+      diagnostic.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, JpsBuildBundle.message("build.message.cannot.start.javac.process.for.0.unknown.jdk.home", chunk.getName())));
       return null;
     }
-    final int fallbackVersion = JpsJavaSdkType.parseVersion(fallbackJdkVersion);
-    if (fallbackVersion < 6) {
-      LOG.info("Version string for fallback JDK is '" + fallbackJdkVersion + "' (recognized as version '" + fallbackVersion + "')." +
-               " At least version 6 is required.");
-      return null;
+
+    // either associatedSdk or fallbackJdk is configured, but associatedSdk cannot be used
+    if (fallbackJdkHome != null) {
+      final int fallbackVersion = JpsJavaSdkType.parseVersion(fallbackJdkVersion);
+      if (isTargetReleaseSupported(fallbackVersion, targetLanguageLevel)) {
+        if (fallbackVersion >= ExternalJavacProcess.MINIMUM_REQUIRED_JAVA_VERSION) {
+          return Pair.create(fallbackJdkHome, fallbackVersion);
+        }
+        else {
+          LOG.info("Version string for fallback JDK is '" + fallbackJdkVersion + "' (recognized as version '" + fallbackVersion + "')." +
+                   " At least version " + ExternalJavacProcess.MINIMUM_REQUIRED_JAVA_VERSION + " is required to launch javac process.");
+        }
+      }
     }
-    return Pair.create(fallbackJdkHome, fallbackVersion);
+
+    // at this point, fallbackJdk is not suitable too
+    if (associatedSdk != null) {
+      if (canRunAssociatedJavac) {
+        // although target release is not supported, attempt to start javac, so that javac properly reports this error
+        return Pair.create(associatedSdk.first.getHomePath(), associatedSdk.second);
+      }
+      else {
+        diagnostic.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR,
+          JpsBuildBundle.message(
+            "build.message.unsupported.javac.version",
+            chunk.getName(),
+            associatedSdk.second,
+            ExternalJavacProcess.MINIMUM_REQUIRED_JAVA_VERSION,
+            targetLanguageLevel
+          )
+        ));
+      }
+    }
+
+    return null;
   }
 
-  @Nullable
-  private static Pair<JpsSdk<JpsDummyElement>, Integer> getAssociatedSdk(ModuleChunk chunk) {
+  private static @Nullable Pair<@NotNull JpsSdk<JpsDummyElement>, @NotNull Integer> getAssociatedSdk(ModuleChunk chunk) {
     // assuming all modules in the chunk have the same associated JDK;
     // this constraint should be validated on build start
     final JpsSdk<JpsDummyElement> sdk = chunk.representativeTarget().getModule().getSdk(JpsJavaSdkType.INSTANCE);
@@ -1285,9 +1338,8 @@ public final class JavaBuilder extends ModuleLevelBuilder {
             LOG.debug(line);
           }
         }
-        else if (line.contains("\\bjava.lang.OutOfMemoryError\\b")) {
-          myContext.processMessage(new CompilerMessage(getBuilderName(), BuildMessage.Kind.ERROR,
-                                                       JpsBuildBundle.message("build.message.insufficient.memory")));
+        else if (line.contains("java.lang.OutOfMemoryError")) {
+          myContext.processMessage(new CompilerMessage(getBuilderName(), BuildMessage.Kind.ERROR, JpsBuildBundle.message("build.message.insufficient.memory")));
           myErrorCount.incrementAndGet();
         }
         else {
