@@ -5,8 +5,7 @@ import com.intellij.diagnostic.Activity;
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ex.ApplicationInfoEx;
-import com.intellij.openapi.application.impl.ApplicationInfoImpl;
-import com.intellij.openapi.util.Ref;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.wm.impl.FrameBoundsConverter;
 import com.intellij.openapi.wm.impl.IdeFrameImpl;
@@ -25,14 +24,13 @@ import java.nio.channels.SeekableByteChannel;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public final class SplashManager {
   private static volatile JFrame PROJECT_FRAME;
   static Splash SPLASH_WINDOW;
 
-  public static @NotNull Runnable scheduleShow(@NotNull Activity parentActivity) {
-    Activity frameActivity = parentActivity.startChild("splash as project frame initialization");
+  public static @NotNull Runnable scheduleShow(@NotNull ApplicationInfoEx appInfo) {
+    Activity frameActivity = StartUpMeasurer.startActivity("splash as project frame initialization");
     try {
       Runnable task = createFrameIfPossible();
       if (task != null) {
@@ -48,7 +46,6 @@ public final class SplashManager {
     }
 
     // must be out of activity measurement
-    ApplicationInfoEx appInfo = ApplicationInfoImpl.getShadowInstance();
     assert SPLASH_WINDOW == null;
     Activity activity = StartUpMeasurer.startActivity("splash initialization");
     SPLASH_WINDOW = new Splash(appInfo);
@@ -65,13 +62,14 @@ public final class SplashManager {
   }
 
   private static @Nullable Runnable createFrameIfPossible() throws IOException {
-    Path infoFile = Paths.get(PathManager.getSystemPath(), "lastProjectFrameInfo");
+    Path infoFile = Path.of(PathManager.getSystemPath(), "lastProjectFrameInfo");
     ByteBuffer buffer;
     try (SeekableByteChannel channel = Files.newByteChannel(infoFile)) {
       buffer = ByteBuffer.allocate((int)channel.size());
       do {
         channel.read(buffer);
-      } while (buffer.hasRemaining());
+      }
+      while (buffer.hasRemaining());
 
       buffer.flip();
       if (buffer.getShort() != 0) {
@@ -89,7 +87,12 @@ public final class SplashManager {
     boolean isFullScreen = buffer.get() == 1;
     int extendedState = buffer.getInt();
     return () -> {
-      PROJECT_FRAME = doShowFrame(savedBounds, backgroundColor, extendedState);
+      try {
+        PROJECT_FRAME = doShowFrame(savedBounds, backgroundColor, extendedState);
+      }
+      catch (Throwable e) {
+        Logger.getInstance(SplashManager.class).error(e);
+      }
     };
   }
 
@@ -98,7 +101,7 @@ public final class SplashManager {
     frame.setAutoRequestFocus(false);
     frame.setDefaultCloseOperation(WindowConstants.DO_NOTHING_ON_CLOSE);
 
-    frame.setBounds(FrameBoundsConverter.convertFromDeviceSpaceAndFitToScreen(savedBounds));
+    frame.setBounds(FrameBoundsConverter.convertFromDeviceSpaceAndFitToScreen(savedBounds).getFirst());
     frame.setExtendedState(extendedState);
 
     frame.setMinimumSize(new Dimension(340, (int)frame.getMinimumSize().getHeight()));
@@ -119,10 +122,7 @@ public final class SplashManager {
     if (SPLASH_WINDOW == null) {
       if (PROJECT_FRAME != null) {
         // just destroy frame
-        Runnable task = getHideTask();
-        if (task != null) {
-          task.run();
-        }
+        hide();
       }
       runnable.run();
       return;
@@ -159,38 +159,34 @@ public final class SplashManager {
   }
 
   public static void hideBeforeShow(@NotNull Window window) {
-    Runnable hideSplashTask = getHideTask();
-    if (hideSplashTask != null) {
+    if (SPLASH_WINDOW != null || PROJECT_FRAME != null) {
       window.addWindowListener(new WindowAdapter() {
         @Override
         public void windowOpened(WindowEvent e) {
-          hideSplashTask.run();
+          hide();
           window.removeWindowListener(this);
         }
       });
     }
   }
 
-  public static @Nullable Runnable getHideTask() {
+  public static void hide() {
     Window window = SPLASH_WINDOW;
     if (window == null) {
       window = PROJECT_FRAME;
       if (window == null) {
-        return null;
+        return;
+      }
+      else {
+        PROJECT_FRAME = null;
       }
     }
+    else {
+      SPLASH_WINDOW = null;
+    }
 
-    Ref<Window> ref = new Ref<>(window);
-    SPLASH_WINDOW = null;
-    PROJECT_FRAME = null;
-
-    return () -> {
-      Window w = ref.get();
-      if (w != null) {
-        ref.set(null);
-        w.setVisible(false);
-        w.dispose();
-      }
-    };
+    StartUpMeasurer.addInstantEvent("splash hidden");
+    window.setVisible(false);
+    window.dispose();
   }
 }
